[package]
name = "gorkwheel_program"
version = "0.1.0"
description = "Gorkwheel — Solana flywheel token with 1-minute reward accrual"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gorkwheel_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
